--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
+        "progressbar.js": "^1.1.0",
         "qr-scanner": "^1.2.0"
     }
 }
