--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
+        "instascan": "^1.0.0",
         "progressbar.js": "^1.1.0",
         "qr-scanner": "^1.2.0"
     }
